# simpler-logger

./: Cargo.toml  README.md
source/: lib.rs  main.rs
tests/: test1.rs
