[package]
name = "simplest-logger"
version = "0.1.0"
edition = "2021"

autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"] # what?
# bench = true
#  path = "source/main.rs"

# [[test]]
# name = "integration"
# path = "tests/lib.rs"

[[bin]]
name = "logger-tests"
path = "source/main.rs"

[dependencies]
log = "0.4.20"

# [dev-dependencies]
# test = "0.1.0" # I don't know what version but this works